FIX: Minor styling change for responsive, aligning text to the right for HeaderNav1, slim-style at max-width:1200px
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10134 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -207,6 +207,7 @@
         height: auto;
         float: none;
         clear: both;
+        text-align: right;
     }
     #HeaderNav2 {
         display:none;
@@ -971,3 +972,4 @@
         display:none;
     }
 }
+
